--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("./fonts.css");
+
+@layer base {
+  html {
+    font-family: "Poppins-Regular", system-ui, sans-serif;
+  }
+}
+
+
+::selection {
+  color: #000000;
+  background: #ffffff;
+}
